--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,7 +121,10 @@
   <data name="Clouds_4096x4096" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Textures\Clouds-4096x4096.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SpitfireMK2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Textures\SpitfireMK2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MeBF109_512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Textures\MeBF109_512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpitfireMK2_512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Textures\SpitfireMK2_512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
