--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -187,4 +187,7 @@
   <data name="LancasterBomber_R90" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Textures\LancasterBomber_R90.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GameIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Textures\Icons\GameIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
